Overflow-x fix

--- a/about_us.css
+++ b/about_us.css
@@ -1,3 +1,6 @@
 /* section {
   max-width: 100%;
 } */
+body, html {
+  overflow-x: hidden;
+}
