--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+body,html {
+  overflow-x: hidden;
+}
 .lead {
   font-size: 1rem;
 }
